# edu-lms

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/apps/app/: admin.py  models.py  urls.py
backend/apps/core/: models.py
backend/apps/users/: admin.py  models.py  urls.py  views.py
backend/config/: providers_config.py  settings.py  urls.py
frontend/: .dockerignore  .env.production  Dockerfile  eslint.config.mjs  index.html  main.py  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  i18n.ts  index.tsx  store.ts
frontend/src/Layouts/: Header.tsx  LayoutMenuData.tsx  Sidebar.tsx  index.tsx
frontend/src/Routes/: AuthProtected.tsx  RoleProtected.tsx  allRoutes.tsx  index.tsx
frontend/src/common/: languages.ts
frontend/src/helpers/: api_helper.ts  fakebackend_helper.ts  getUserRoles.tsx  maskEmail.ts  url_helper.ts
frontend/src/hooks/: useApiHandler.ts  useCascadeSelect.tsx  useCourseOptions.ts  useCrudModals.tsx  useFetchData.ts  useHomeworkCascadeSelect.tsx  useRecaptcha.ts  useRecaptchaSubmit.ts  useRecaptchaV3.ts  useReviewQueue.ts  useSubmissionReview.ts  useSubmissionsList.ts  useUsersByRole.ts  userPermissions.tsx
frontend/src/slices/: index.ts
frontend/src/types/: Category.tsx  Course.ts  Enrollment.tsx  HomeworkSubmission.ts  Lesson.ts  (+17 more)
nginx/: default.conf
(+328 files in other folders)
